deploy: d56ee42f8d6964b0961dc59d309419d1e9d40f17

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://rakshitsakhuja.github.io/blogs/" />
 <meta property="og:url" content="https://rakshitsakhuja.github.io/blogs/" />
 <meta property="og:site_name" content="AI/ML notes" />
-<meta property="og:image" content="https://rakshitsakhuja.github.io/blogs/images/logo.png" />
+<meta property="og:image" content="https://rakshitsakhuja.github.io/blogs/images/logo-avtar.jpeg" />
 <script type="application/ld+json">
-{"description":"One of the beautiful things about Machine Learning is you are not going to remember lot of details if you are not practicing it.","url":"https://rakshitsakhuja.github.io/blogs/","@type":"WebSite","headline":"AI/ML notes","image":"https://rakshitsakhuja.github.io/blogs/images/logo.png","name":"AI/ML notes","@context":"https://schema.org"}</script>
+{"description":"One of the beautiful things about Machine Learning is you are not going to remember lot of details if you are not practicing it.","url":"https://rakshitsakhuja.github.io/blogs/","@type":"WebSite","headline":"AI/ML notes","image":"https://rakshitsakhuja.github.io/blogs/images/logo-avtar.jpeg","name":"AI/ML notes","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blogs/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://rakshitsakhuja.github.io/blogs/feed.xml" title="AI/ML notes" /><link rel="shortcut icon" type="image/x-icon" href="/blogs/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
